# switch-ezremote-client

./: CMakeLists.txt  README.md
certs/: cacert.pem
lang/: Arabic.ini  English.ini  Greek.ini  Japanese.ini  Ryukyuan.ini  Simplified Chinese.ini  Traditional Chinese.ini  Turkish.ini  Ukrainian.ini
source/: actions.cpp  actions.h  config.cpp  config.h  fs.cpp  fs.h  gui.cpp  gui.h  ime_dialog.cpp  ime_dialog.h  imgui_impl_switch.cpp  imgui_impl_switch.h  lang.cpp  lang.h  main.cpp  textures.cpp  textures.h  util.h  windows.cpp  windows.h  zip_util.cpp  zip_util.h
source/clients/: apache.cpp  apache.h  archiveorg.cpp  archiveorg.h  baseclient.cpp  baseclient.h  ftpclient.cpp  ftpclient.h  github.cpp  github.h  iis.cpp  iis.h  myrient.cpp  myrient.h  nginx.cpp  nginx.h  npxserve.cpp  npxserve.h  rclone.cpp  rclone.h  remote_client.h  smbclient.cpp  smbclient.h  webdav.cpp  webdav.h  webdavclient.cpp  webdavclient.h
source/webdav/: client.cpp  client.hpp  request.cpp  urn.cpp
third_parties/imgui/: imgui.cpp
